--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -277,7 +277,8 @@ a:hover {
   .main-content {
     max-width: 64rem;
     padding: 2rem 6rem;
-    margin: 0 auto;
+      margin: 0 auto;
+      margin-top: 150px;
     font-size: 1.1rem;
   }
 }
@@ -299,6 +300,7 @@ a:hover {
 .site-footer {
   padding-top: 2rem;
   margin-top: 2rem;
+  margin-bottom: 30px;
   border-top: solid 1px #eff0f1;
 }
 
