--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -139,6 +139,60 @@ a:hover {
   }
 }
 
+#textbody{
+  color: darkslategray;
+  font-size: 15.5px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 1px;
+  word-spacing: 3px;
+}
+
+#bluetext{
+  font-style: italic;
+  text-decoration: underline;
+  font-size: 15.5px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 1px;
+  word-spacing: 3px;
+}
+
+#imageclass{
+  margin-top: 40px;
+  margin-left: 150px;
+  width: 400px;
+}
+
+#redbody{
+  color: #E50914;
+  font-size: 15.5px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 1px;
+  word-spacing: 3px;
+}
+
+#bluebody{
+  color: skyblue;
+  font-size: 15.5px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 1px;
+  word-spacing: 3px;
+}
+
+#greenbody{
+  color: #66aa33;
+  font-size: 15.5px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 1px;
+  word-spacing: 3px;
+}
+
+#blueybody{
+  color: #006e99;
+  font-size: 15.5px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 1px;
+  word-spacing: 3px;
+}
 .main-content :first-child {
   margin-top: 0;
 }
@@ -151,10 +205,14 @@ a:hover {
 .main-content h4,
 .main-content h5,
 .main-content h6 {
+    /* margin-top: 50px; */
+    margin-top: 300px;
+    margin-bottom: 1rem;
+    font-weight: normal;
+    color: darkblue;
+}
+.main-content h6 {
   margin-top: 2rem;
-  margin-bottom: 1rem;
-  font-weight: normal;
-  color: #159957;
 }
 .main-content p {
   margin-bottom: 1em;
@@ -296,11 +354,14 @@ a:hover {
     font-size: 1rem;
   }
 }
-
+.header2{
+  margin-top: 100px;
+  color: darkblue;
+}
 .site-footer {
-  padding-top: 2rem;
   margin-top: 2rem;
   margin-bottom: 30px;
+  padding-left: 10px;
   border-top: solid 1px #eff0f1;
 }
 
