--- a/css/style.css
+++ b/css/style.css
@@ -254,10 +254,20 @@ header nav ul li {
 }
 header nav ul li a {
   text-decoration: none;
-  color: black;
+  color: #898989;
 }
 header nav ul li a:hover {
-  color: #898989;
+  background-color: white;
+  color: black;
+}
+
+.topbar ul li.active > a {
+  background-color: white;
+  color: black;
+}
+
+header nav ul li a:active {
+  color: black;
 }
 header nav ul li.current a {
   color: #898989;
@@ -782,7 +792,7 @@ section.contact ul li i {
 footer {
   width: 100%;
   display: block;
-  background: #C9F6FF;
+  background: #d3b4ca;
   padding: 10px 0;
 }
 footer .copyright {
